--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.3.1",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.7",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "express-validator": "^7.0.1"
