feat: add prominent startup logs for better Render visibility

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,11 @@
+# URL de l'API backend
+# IMPORTANT : Cette variable DOIT être définie AVANT le build de l'application !
+# 
+# Développement local :
 VITE_API_URL=http://localhost:5000
+#
+# Production (Render) :
+# VITE_API_URL=https://helpdesk-backend-xxxx.onrender.com
+#
+# Production (autre hébergement) :
+# VITE_API_URL=https://api.votre-domaine.com
