--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -132,7 +132,7 @@ jobs:
         run: npm ci
 
       - name: Création du fichier .env pour le build
-        run: echo "VITE_API_URL=http://localhost:5000" > .env
+        run: echo "VITE_API_URL=${{ secrets.RENDER_BACKEND_URL }}" > .env
 
       - name: Build de l'application
         run: npm run build
@@ -143,50 +143,34 @@ jobs:
           name: frontend-build
           path: frontend/dist/
 
-  docker-build:
-    name: Build Docker Images
+  deploy-backend:
+    name: Déploiement Backend sur Render
     runs-on: ubuntu-latest
-    needs: [backend-build, frontend-build]
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout du code
-        uses: actions/checkout@v4
-
-      - name: Configuration de Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build de l'image Backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: false
-          tags: helpdesk-backend:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Build de l'image Frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: false
-          tags: helpdesk-frontend:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  deploy:
-    name: Déploiement
-    runs-on: ubuntu-latest
-    needs: [docker-build]
+    needs: [backend-build]
     if: github.ref == 'refs/heads/main'
     
     steps:
-      - name: Checkout du code
-        uses: actions/checkout@v4
-
-      - name: Simulation du déploiement
+      - name: Déclenchement du déploiement Backend
         run: |
-          echo "🚀 Déploiement en cours..."
-          echo "✅ Backend déployé avec succès"
-          echo "✅ Frontend déployé avec succès"
-          echo "📍 Application accessible sur : https://votre-domaine.com"
+          curl -X POST "${{ secrets.RENDER_BACKEND_DEPLOY_HOOK }}"
+          echo "Déploiement du backend déclenché sur Render"
+
+  deploy-frontend:
+    name: Déploiement Frontend sur Render
+    runs-on: ubuntu-latest
+    needs: [frontend-build, deploy-backend]
+    if: github.ref == 'refs/heads/main'
+    
+    steps:
+      - name: Déclenchement du déploiement Frontend
+        run: |
+          curl -X POST "${{ secrets.RENDER_FRONTEND_DEPLOY_HOOK }}"
+          echo "Déploiement du frontend déclenché sur Render"
+
+      - name: Attente de la fin du déploiement
+        run: |
+          echo "Déploiement en cours sur Render..."
+          sleep 60
+          echo "Application déployée avec succès!"
+          echo "Backend: ${{ secrets.RENDER_BACKEND_URL }}"
+          echo "Frontend: ${{ secrets.RENDER_FRONTEND_URL }}"
