--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -148,6 +148,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [backend-build]
     if: github.ref == 'refs/heads/main'
+    environment: secrets
     
     steps:
       - name: Déclenchement du déploiement Backend
@@ -160,6 +161,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [frontend-build, deploy-backend]
     if: github.ref == 'refs/heads/main'
+    environment: secrets
     
     steps:
       - name: Déclenchement du déploiement Frontend
